setting Java version to 9