@@ -40,7 +40,7 @@ class AccountControllerTest {
         //given
         LocalDateTime now = LocalDateTime.now();
         Account account = TestDataBuilder.buildAnAccount("TestAccount");
-        Set<Event> eventsSetForAccount = Set.copyOf(Arrays.asList(
+        Set<Event> eventsSetForAccount = new HashSet<>(Arrays.asList(
                 TestDataBuilder.buildAnEvent(account, "Synchonization completed", now),
                 TestDataBuilder.buildAnEvent(account, "Synchonization started", TestDataBuilder.getTimestampUnitBefore(23, ChronoUnit.HOURS)),
                 TestDataBuilder.buildAnEvent(account, "Synchonization started", TestDataBuilder.getTimestampUnitBefore(23, ChronoUnit.HOURS))
@@ -65,7 +65,7 @@ class AccountControllerTest {
         //given
         LocalDateTime now = LocalDateTime.now();
         Account account = TestDataBuilder.buildAnAccount("TestAccount");
-        Set<Event> eventsSetForAccount = Set.copyOf(Arrays.asList(
+        Set<Event> eventsSetForAccount = new HashSet<>(Arrays.asList(
                 TestDataBuilder.buildAnEvent(account, "Synchonization completed", now),
                 TestDataBuilder.buildAnEvent(account, "Synchonization started", TestDataBuilder.getTimestampUnitBefore(23, ChronoUnit.HOURS)),
                 TestDataBuilder.buildAnEvent(account, "Synchonization started", TestDataBuilder.getTimestampUnitBefore(22, ChronoUnit.HOURS))
